fix about section mobile font size

--- a/public/src/scss/style.scss
+++ b/public/src/scss/style.scss
@@ -905,7 +905,7 @@ div[ng-view].ng-enter-active {
 
   #about {
     .billboard div.brief {
-      font-size: $subtitle-font-size*.2;
+      font-size: $subtitle-font-size*.8;
       padding-left: 14px;
       padding-right: 14px;
     }
